# risk-engine

./: .gitignore  Dockerfile  pyproject.toml  requirements.txt
.github/workflows/: build-risk-engine.yml
config/: risk_config.yaml
risk_engine/: __init__.py  adapter.py  checker.py  config.py
risk_engine/alerts/: __init__.py  publisher.py
risk_engine/calculators/: __init__.py  metrics.py  position_sizer.py  stop_loss.py  var_calculator.py
risk_engine/checks/: __init__.py  base.py  portfolio_risk.py  position_sizing.py  trade_risk.py  var_check.py
risk_engine/data/: __init__.py  market_data.py  portfolio_state.py  rules_client.py
risk_engine/models/: __init__.py  portfolio.py  risk_result.py
tests/: __init__.py  conftest.py  test_adapter.py  test_alerts.py  test_calculators.py  test_checker.py  test_checks.py  test_config.py  test_market_data.py  test_models.py  test_portfolio_state.py  test_rules_client.py  test_stop_loss.py
